<resources>
    <string name="app_name" translatable="false">iBeauty</string>
    <string name="todo">TODO</string>
    <string name="menu_home">Home</string>
    <string name="menu_busca">Buscar</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_explorar">Explorar</string>
    <string name="menu_perfil">Perfil</string>
    <string name="login">Login</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="cadastro">Cadastro</string>
    <string name="explorar">Explorar</string>
    <string name="bem_vindo">SEJA BEM-VINDO(A)!</string>
    <string name="cabeleireiro">Cabeleireiro</string>
    <string name="unhas">Unhas</string>
    <string name="maquiagem">Maquiagem</string>
    <string name="spa">Spa</string>
    <string name="depilacao">Depilação</string>
    <string name="barbearia">Barbearia</string>
    <string name="tipo_servico">Qual serviço você procura?</string>
    <string name="tit_agendamento">AGENDAMENTO</string>
    <string name="confirma_senha">Confirmar senha</string>
    <string name="recupera_senha">Recuperar senha</string>
    <string name="bt_cadastrar">Cadastrar</string>
    <string name="bt_onboarding">Vamos lá!</string>
    <string name="bt_ir_para_login">Já tenho cadastro! Ir para o login</string>
    <string name="bt_cliente">SOU UM(A) CLIENTE</string>
    <string name="bt_profissional">SOU UM(A) PROFISSIONAL</string>
    <string name="titulo_cadastro_pessoal">Cadastro pessoal:</string>
    <string name="titulo_cadastro_estabelecimento">Cadastro estabelecimento:</string>
    <string name="titulo_localizacao">LOCALIZAÇÃO</string>
    <string name="titulo_contatos">NOSSOS CONTATOS</string>
    <string name="titulo_explorar">EXPLORAR</string>
    <string name="data_nascimento">Data de nascimento</string>
    <string name="telefone">Telefone</string>
    <string name="telefone_estabelecimento">Telefone para contato</string>
    <string name="bt_proximo">Próximo</string>
    <string name="cep">CEP</string>
    <string name="endereco">Endereço</string>
    <string name="ver_mais">Ver mais</string>
    <string name="bt_sair">Sair</string>
    <string name="saber_mais">Quer saber mais? Entre em contato conosco!</string>
    <string name="txt_contatos">Não conseguiu solicitar um horário através do aplicativo? Entre em contato conosco, venha conhecer o nosso espaço!</string>
    <string name="nome_completo_cliente">Nome completo</string>
    <string name="nome_estabelecimento">Nome do estabelecimento</string>
    <string name="redefine_senha">Esqueceu sua senha? Clique aqui para redefini-la!</string>
    <string name="agradece_solicitacao">Agradecemos a sua solicitação!</string>
    <string name="agradece_solicitacao_dois">Em breve, um de nossos atendentes entrará em contato, para confirmar a sua solicitação!</string>
    <string name="titulo_insere_dados_estabelecimento">Insira os dados do estabelecimento:</string>
    <string name="titulo_insere_dados_pessoais">Insira seus dados pessoais:</string>
    <string name="titulo_redefine_senha">Redefinição de senha:</string>
    <string name="titulo_onboarding_um">Os serviços de beleza presentes na sua região!</string>
    <string name="subtitulo_onboarding_um">Pesquise os estabelecimentos mais próximos de você!</string>
    <string name="titulo_onboarding_dois">Agendamento de serviços de forma rápida e prática!</string>
    <string name="subtitulo_onboarding_dois">Solicite um horário com o estabelecimento de sua preferência!</string>
    <string name="titulo_onboarding_tres">Serviços feitos no conforto de sua casa!</string>
    <string name="subtitulo_onboarding_tres">Tenha acesso a estabelecimentos que oferecem serviços a domicílio!</string>
    <string name="titulo_pesquisa">Pesquisar</string>
    <string name="titulo_agendamento">AGENDAMENTO</string>
    <string name="mensagem">hi</string>
    <string name="mensagem2">Im iBeauty</string>
    <string name="chat">iBeauty</string>
    <string name="chat_dois">Você</string>
    <string name="assistente">CHAT</string>
    <string name="digite">Digite uma mensagem aqui</string>
    <string name="solicita_horario">Solicitar horário</string>
    <string name="telefone_wpp">Informe seu telefone/whatsapp:</string>
    <string name="servico_agendamento">Qual serviço você deseja agendar?</string>
    <string name="escolher_data">Escolha um dia e horário:</string>
    <string name="tipo_atendimento">Escolha um meio de atendimento:</string>
    <string name="tipo_atendimento_um">No estabelecimento</string>
    <string name="tipo_atendimento_dois">Em domicílio</string>
    <string name="hint_telefone">(xx) xxxxx-xxxx</string>
    <string name="hint_hora">xx:xx</string>
    <string name="hint_data">xx/xx/xxxx</string>
    <string name="sobre_nos">Sobre Nós</string>
    <string name="fotos_estab">Veja o nosso trabalho!</string>
</resources>