<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/btHome"
        android:enabled="true"
        android:icon="@drawable/icon_home"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/btBusca"
        android:enabled="true"
        android:icon="@drawable/icon_busca"
        android:title="@string/menu_busca" />
    <item
        android:id="@+id/btChat"
        android:enabled="true"
        android:icon="@drawable/icon_chatbot"
        android:title="@string/menu_chat" />
    <item
        android:id="@+id/btExplorar"
        android:enabled="true"
        android:icon="@drawable/icon_camera"
        android:title="@string/menu_explorar"/>
    <item
        android:id="@+id/btPerfil"
        android:enabled="true"
        android:icon="@drawable/icon_perfil"
        android:title="@string/menu_perfil" />
</menu>