<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="cadastroProfissionalUm"
            type="br.iesb.mobile.ibeauty.ui.fragment.CadastroProfissionalUmFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.CadastroProfissionalUmFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/FundoCadastroProfissional1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bege"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="-63dp">

            <ImageView
                android:id="@+id/ivLogoCadastroProf1"
                android:layout_width="214dp"
                android:layout_height="70dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/logoibeauty" />

            <ImageView
                android:id="@+id/btVoltarProf1"
                android:layout_width="16dp"
                android:layout_height="15dp"
                app:layout_constraintBottom_toTopOf="@+id/tvCadastroProfissional"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.041"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.818"
                app:srcCompat="@drawable/bt_voltar" />

            <TextView
                android:id="@+id/tvCadastroProfissional"
                android:layout_width="0dp"
                android:layout_height="86dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="52dp"
                android:fontFamily="@font/comfortaa"
                android:text="@string/titulo_insere_dados_estabelecimento"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/tvEnderecoSalao"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                android:backgroundTint="#3C3F41"
                android:ems="10"
                android:hint="@string/endereco"
                android:inputType="textPostalAddress"
                android:theme="@style/SelectionColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.373"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

            <EditText
                android:id="@+id/editTextTextPersonName2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="24dp"
                android:backgroundTint="#3C3F41"
                android:ems="10"
                android:hint="@string/nome_estabelecimento"
                android:inputType="textPersonName"
                android:theme="@style/SelectionColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCadastroProfissional" />

            <EditText
                android:id="@+id/tvCepSalao"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                android:backgroundTint="#3C3F41"
                android:ems="10"
                android:hint="@string/cep"
                android:inputType="number"
                android:theme="@style/SelectionColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvEnderecoSalao" />

            <EditText
                android:id="@+id/etpTelefone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                android:backgroundTint="#3C3F41"
                android:ems="10"
                android:hint="@string/telefone_estabelecimento"
                android:inputType="phone"
                android:theme="@style/SelectionColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCepSalao" />

            <Button
                android:id="@+id/btCadastroProf1"
                style="?botaoMarromClaro"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="24dp"
                android:text="@string/bt_proximo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etpTelefone" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>