<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="cadastroCliente"
            type="br.iesb.mobile.ibeauty.ui.fragment.CadastroClienteFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.CadastroClienteFragment"
        android:background="@color/bege">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bege"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp">

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="214dp"
                android:layout_height="70dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/logoibeauty" />

            <ImageView
                android:id="@+id/btVoltarTela"
                android:layout_width="16dp"
                android:layout_height="15dp"
                app:layout_constraintBottom_toTopOf="@+id/titCadastro2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.041"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.818"
                app:srcCompat="@drawable/voltar" />

            <TextView
                android:id="@+id/titCadastro2"
                android:layout_width="0dp"
                android:layout_height="53dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="52dp"
                android:fontFamily="@font/comfortaa"
                android:text="@string/titulo_cadastro_pessoal"
                android:textAlignment="textStart"
                android:textColor="#000000"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.058"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/tvEmailCadastro"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="24dp"
                android:backgroundTint="#3C3F41"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titCadastro2" />

            <EditText
                android:id="@+id/tvSenhaCadastro"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                android:backgroundTint="#3C3F41"
                android:ems="10"
                android:hint="@string/senha"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvEmailCadastro" />

            <EditText
                android:id="@+id/tvConfirmarSenha"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                android:backgroundTint="#3C3F41"
                android:ems="10"
                android:hint="@string/confirma_senha"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSenhaCadastro" />

            <Button
                android:id="@+id/btProximo"
                style="?botaoAmarelo"
                android:layout_width="0dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="24dp"
                android:text="@string/bt_proximo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvConfirmarSenha"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>