<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="tipoCadastro"
            type="br.iesb.mobile.ibeauty.ui.fragment.TipoCadastroFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tela_tipo_cadastro"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.TipoCadastroFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bege"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:id="@+id/cadastro"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="52dp"
                android:fontFamily="@font/comfortaa"
                android:text="@string/cadastro"
                android:textAlignment="textStart"
                android:textColor="#000000"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.058"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btTipoProfissional"
                style="?botaoCinza"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="24dp"
                android:text="@string/bt_profissional"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btTipoCliente" />

            <Button
                android:id="@+id/btTipoCliente"
                style="?botaoAmarelo"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="52dp"
                android:layout_marginEnd="24dp"
                android:text="@string/bt_cliente"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.492"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cadastro" />

            <TextView
                android:id="@+id/linkLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/bt_ir_para_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btTipoProfissional" />

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="214dp"
                android:layout_height="70dp"
                android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/logoibeauty" />

            <ImageView
                android:id="@+id/btVoltarTela"
                android:layout_width="16dp"
                android:layout_height="15dp"
                app:layout_constraintBottom_toTopOf="@+id/cadastro"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.041"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.818"
                app:srcCompat="@drawable/voltar" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>