<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bege"
        tools:context=".ui.fragment.LoginFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bege"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp">

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="214dp"
                android:layout_height="70dp"
                android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/logoibeauty" />

            <ImageView
                android:id="@+id/btVoltarTela"
                android:layout_width="16dp"
                android:layout_height="15dp"
                app:layout_constraintBottom_toTopOf="@+id/titLogin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.041"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.818"
                app:srcCompat="@drawable/voltar" />

            <TextView
                android:id="@+id/titLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="52dp"
                android:fontFamily="@font/comfortaa"
                android:text="@string/login"
                android:textAlignment="textStart"
                android:textColor="#000000"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.058"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/emailLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="24dp"
                android:backgroundTint="#3C3F41"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.523"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titLogin" />

            <EditText
                android:id="@+id/senhaLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                android:backgroundTint="#3C3F41"
                android:ems="10"
                android:hint="@string/senha"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailLogin" />

            <Button
                android:id="@+id/btLogin"
                style="?botaoMarromEscuro"
                android:layout_width="0dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="24dp"
                android:text="@string/login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/senhaLogin" />

            <TextView
                android:id="@+id/tvEsqueceuSenha"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:text="@string/redefine_senha"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btLogin" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>